--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "serve": "vue-cli-service serve --mode production",
         "build": "vue-cli-service build",
+        "build:production": "vue-cli-service build --mode production",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
@@ -12,11 +13,11 @@
         "axios": "^0.19.2",
         "core-js": "^3.6.5",
         "v-tooltip": "^2.0.3",
-        "vue": "^2.6.11",
-        "vue-class-component": "^7.2.3",
+        "vue": "^2.6.12",
+        "vue-class-component": "^7.2.6",
         "vue-property-decorator": "^8.4.2",
-        "vue-router": "^3.2.0",
-        "vuelidate": "^0.7.5",
+        "vue-router": "^3.4.9",
+        "vuelidate": "^0.7.6",
         "vuex": "^3.4.0"
     },
     "devDependencies": {
@@ -26,6 +27,6 @@
         "@vue/cli-plugin-vuex": "~4.4.0",
         "@vue/cli-service": "~4.4.0",
         "typescript": "~3.9.3",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.12"
     }
 }
