--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve --mode production",
+        "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "build:production": "vue-cli-service build --mode production",
         "lint": "vue-cli-service lint"
